tests/baselines/reference/parserSkippedTokens20.errors.txt
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens20.ts(1,8): error TS2304: Cannot find name 'X'.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens20.ts(1,10): error TS2304: Cannot find name 'T'.
tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens20.ts(1,12): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/SkippedTokens/parserSkippedTokens20.ts (3 errors) ====
    var v: X<T \
           ~
!!! error TS2304: Cannot find name 'X'.
             ~
!!! error TS2304: Cannot find name 'T'.
               
!!! error TS1127: Invalid character.